--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~7.8.0",
+    "sharp": "^0.33.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
